# BCD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  builder.sh  clean_all.sh  run_all.sh
BCD_libs/: Boustrophedon.conf  BoustrophedonConfig.cmake  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install_manifest.txt  run.sh
BCD_libs/include/: BCD.h  DrawImage.h  OpenImage.h
BCD_libs/src/: BCD.cpp  DrawImage.cpp  OpenImage.cpp
Leo_libs/: CMakeCache.txt  CMakeLists.txt  Leo.conf  LeoConfig.cmake  Makefile  README.md  clean.sh  cmake_install.cmake  install_manifest.txt
Leo_libs/include/: Point2D.h  ReebGraph.h  RegionData.h
Leo_libs/src/: Point2D.cpp  ReebGraph.cpp  RegionData.cpp
bcd/cmake/: BCDConfig.cmake
bcd/src/bcd/: DrawImage.cpp
bcd/src/bcd_utils/: RegionData.cpp
demo/: Makefile  README.md  clean.sh  demo.pro  libs.txt  run.sh
demo/include/: main.h
demo/inputs/: ii.wf~  img.wf
demo/src/: main.cpp
include/bcd/: BCD.h  DrawImage.h  OpenImage.h
include/bcd_utils/: ReebGraph.h
src/bcd/: BCD.cpp  OpenImage.cpp
src/bcd_utils/: Point2D.cpp  ReebGraph.cpp
tests/: CMakeLists.txt  test_bcd.cpp
